--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -12,35 +12,35 @@
     <div class="col">
         <div class="row">
             <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 1)">Send Audio Sample 1</button>
+                <button class="btn btn-primary" onclick="sendAudioSample(this, 'bentivi.mp3')">Send Audio Sample 1</button>
             </div>
             <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 2)">Send Audio Sample 2</button>
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 2</button>
             </div>
             <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 3)">Send Audio Sample 3</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 4)">Send Audio Sample 4</button>
-            </div>
-            <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 5)">Send Audio Sample 5</button>
-            </div>
-            <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 6)">Send Audio Sample 6</button>
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 3</button>
             </div>
         </div>
         <div class="row">
             <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 7)">Send Audio Sample 7</button>
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 4</button>
             </div>
             <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 8)">Send Audio Sample 8</button>
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 5</button>
             </div>
             <div class="col-4 text-center">
-                <button class="btn btn-primary" onclick="sendAudioSample(this, 9)">Send Audio Sample 9</button>
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 6</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 text-center">
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 7</button>
+            </div>
+            <div class="col-4 text-center">
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 8</button>
+            </div>
+            <div class="col-4 text-center">
+                <button class="btn btn-primary" onclick="sendAudioSample(this, '')">Send Audio Sample 9</button>
             </div>
         </div>
         <div class="row justify-content-end">
@@ -55,9 +55,9 @@
         </div>
     </div>
     <script>
-        async function sendAudioSample(clickedButton, btnIndex) {
+        async function sendAudioSample(clickedButton, audioFileToPlay) {
             const { stream_audio_file } = await import('./pkg/wasm_websocket_sample.js');
-
+            stream_audio_file(`${location.host}/audio/${audioFileToPlay}`); 
         }
     </script>
     <script type="module">
@@ -65,5 +65,4 @@
         init();
     </script>
 </body>
-
 </html>
